new calculators added

--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -641,9 +641,10 @@
 
             <a href="airflowrate.html" class="calculator-btn">Air Flow Rate (Mass Flow) Calculator</a>
             <a href="airflowratetimebasedcal.html" class="calculator-btn">Air Flow Rate (Time-Based) Calculator</a>
-
+            <a href="todetermineblowdownrateofboiler.html" class="calculator-btn">Boiler Blowdown Rate Calculator</a>
             <a href="carnoteffiencycalculator.html" class="calculator-btn">Carnot Efficiency Calculator</a>
             <a href="carbonfootprintefficiency.html" class="calculator-btn">Carbon Footprint Efficiency Calculator</a>
+            <a href="calculatingboilerefficiency.html" class="calculator-btn">Calculating boiler efficiency Calculator</a>
 
 
             <a href="envcarbonfootprintcal.html" class="calculator-btn">Environmental(Impact) Carbon Footprint Calculator</a>
@@ -674,6 +675,7 @@
              <a href="steamcondensingrateforhorizontalpipesinstillair.html" class="calculator-btn">Steam Condensing Rate For Horizontal Pipes In Still Air Calculator</a>
              <a href="steamcondensingrate.html" class="calculator-btn">Steam Condensing Rate for Air Heating Equipment caluculator</a>
              <a href="steamrunningloadtokeepasteammaintain.html" class="calculator-btn">Steam Running Load to keep a steam maintain Calculator</a>
+             <a href="steaminjectionrequiredtopowerasteamdeaerator.html" class="calculator-btn">Steam Injection Required To Power A Steam Deaerator Calculator</a>
 
              <a href="thermodynamiccal.html" class="calculator-btn">Thermodynamic Temperature Calculator</a>
              <a href="carbonfootprintcal.html" class="calculator-btn" >Travel Carbon Footprint Calculator</a>
@@ -683,6 +685,7 @@
              <a href="steamflowrateforasteaminjection.html" class="calculator-btn">To Determine The Steam Flowrate For A Steam Injection Process Calculator</a>
              <a href="resistivityfromconductivity.html" class="calculator-btn">Thermal Resistivity From Conductivity Calculator</a>
              <a href="totaldissolvedsolids.html" class="calculator-btn">TDS Calculator (Density Method) Calculator</a>
+             <a href="tdsconductivitymethod.html" class="calculator-btn">TDS (Total Dissolved Solids) conductivity Calculator</a>
 
              <a href="vaporpressurecalculator.html" class="calculator-btn">Vapor Pressure Calculator</a>
 
