--- a/qualitysubcalculators.html
+++ b/qualitysubcalculators.html
@@ -635,6 +635,8 @@
             <input type="text" id="searchBar" class="form-control custom-search" placeholder="🔍 Search Calculator..." onkeyup="filterCalculators()">
         </div>
         <div class="button-container" id="calculatorList">
+            <a href="correcttheconductivityofasample.html" class="calculator-btn">correct the conductivity of a sample Calculator</a>
+            <a href="electricalresidenceofaconductivityprobe.html" class="calculator-btn">Electrical Resistance Calculator for Conductivity Probe calculator</a>
             <a href="MassFlowRateofSteamThroughanOrifice.html" class="calculator-btn">Mass Flow Rate of Steam Through an Orifice calculator</a>
             <a href="relatingboilerpressuretoheattransferrate.html" class="calculator-btn">Relating Boiler Pressure To Heat Transfer Rate Calculator</a>
 
@@ -642,6 +644,7 @@
             <a href="Velocity of Steam Passing ThroughanOrificequality.html" class="calculator-btn">Steam Velocity Calculator through an orifice Calculator</a>
             <a href="evaporationfactorofaboilerfromitsfromandatrating.html" class="calculator-btn">To Determine The Evaporation Factor Of A Boiler From Its 'From & At' Rating Calculator</a>
             <a href="actualevaporationrateofaboilerfromitskWrating.html" class="calculator-btn">To Determine The Actual Evaporation Rate Of A Boiler From Its kW Rating And The Energy Required To Be Added To The Feedwater To Make Steam Calculator</a>
+            <a href="boilerhorsepowerfromheattransfersrea.html" class="calculator-btn">To Determine Boiler Horse Power From Heat Transfer Area Calculator</a>
 
          
         </div>        
