--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -700,6 +700,7 @@
             <a href="nema&ipratecal.html" class="calculator-btn">NEMA and IP Ratings Calculator</a>
             <a href="trir.html" class="calculator-btn">OSHA Total Recordable Incident Rate (TRIR) Calculator</a>
             <a href="dartcal.html" class="calculator-btn">OSHA DART Rate Calculator</a>
+            <a href="ohmslaw.html" class="calculator-btn">Ohm's Law Calculator</a>
             <a href="ppecomplianceratecal.html" class="calculator-btn">PPE Compliance Rate</a>
             <a href="pressuregradientcalculator.html" class="calculator-btn">Pressure Gradient Calculator</a>
             <a href="risklevelassessment.html" class="calculator-btn">Risk Level Assessment</a>
@@ -717,7 +718,8 @@
             <a href="steamconsumptionbyinjection.html"  class="calculator-btn">Steam Consumption by Injection into a Tank caluculator</a>
             <a href="steamstart-uploadtobringsteampipework.html" class="calculator-btn">Steam Start-Up Load to bring steam pipework Calculator</a>
             <a href="stressinaboilershellresultingfromboilerpressure.html" class="calculator-btn">Stress In A Boiler Shell Resulting From Boiler Pressure Calculator</a>
-
+            <a href="sizingacontrolvalveforliquid.html" class="calculator-btn">Sizing A Control Valve For Liquid Calculator</a>
+            <a href="sizingacontrolvalveforsaturatedsteam.html" class="calculator-btn">Sizing A Control Valve For Saturated Steam Calculator</a>
             <a href="traininghourcal.html" class="calculator-btn">Training Hour Calculation</a>
             <a href="deadloadcal.html" class="calculator-btn">Total Dead Load Calculation (DL)</a>
             <a href="totalintendload.html" class="calculator-btn">Total Intended Load (TIL)</a>
