new calcualtors added

--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -646,12 +646,18 @@
 
 
             <a href="bitwearefficiencycal.html" class="calculator-btn">Bit Wear and Efficiency Calculator</a>
+            <a href="bernoullisequationmultipliedthroughoutbypg.html" class="calculator-btn">Bernoulli's Equation Multiplied Throughout by 'pg' Calculator</a>
             <a href="changeinentropycal.html" class="calculator-btn">Change in Entropy Calculator</a>
             <a href="costofaccident.html" class="calculator-btn">Cost of Accident Calculator</a>
             <a href="casingburstpressurecalculator.html" class="calculator-btn">Casing Burst Pressure Calculator</a>
             <a href="casingcolapsepresurecal.html" class="calculator-btn">Casing Collapse Pressure Calculator</a>
             <a href="cementvolume.html" class="calculator-btn">cement-volume-calculator</a>
             <a href="cementslurrydensity.html" class="calculator-btn">cement-slurry-density-calculator</a>
+            <a href="condensatevelocityofapipecalculator.html" class="calculator-btn">Condensate Velocity of a Pipe Calculator</a>
+            <a href="coolingwaterflowrate calculatorfordesuperheater.html" class="calculator-btn">Cooling Water Flowrate Calculator for Desuperheater</a>
+            <a href="capacitance.html" class="calculator-btn">Capacitance Law Calculator</a>
+
+
 
 
             <!-- <a href="drillingcostestimator.html" class="calculator-btn">Drilling Cost Estimator Calculator</a> -->
@@ -659,6 +665,8 @@
           
             <a href="densityofmaterial.html" class="calculator-btn">Density of a material Calculator</a>
             <a href="daltonslawofpartialpressures.html" class="calculator-btn">Dalton's Law of Partial Pressures Calculator</a>
+            <a href="drillingtorquanddragcalcultor.html" class="calculator-btn">Drilling Torque & Drag Calculator</a>
+
             
             <a href="earthingcalculator.html" class="calculator-btn">Earthing System Calculator</a>
             <a href="energytransformcal.html" class="calculator-btn">Energy Transfer Calculator</a>
@@ -728,6 +736,8 @@
             <a href="tensionperlegcalcualtor.html" class="calculator-btn">Tension Per Leg Calculator</a>
             <a href="trifr.html" class="calculator-btn">Total Recordable Incident Frequency Rate (TRIFR) Calculator</a>
             <a href="totallosshourscalculator.html" class="calculator-btn">Total Loss Hours Calculator</a>
+            <a href="pumpdeliveryheadcalculator.html" class="calculator-btn">Total Pump Delivery Head Calculator</a>
+
 
             <a href="requiredsteamflowratefromakw.html" class="calculator-btn">To Determine The Required Steam Flowrate From A kW Rating Calculator</a>
             <a href="velocity of steam passingthroughanorifice.html" class="calculator-btn">Velocity of Steam Passing Through an Orifice Calculator (1)</a>
