new calculators added

--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -642,9 +642,11 @@
             <a href="airflowrate.html" class="calculator-btn">Air Flow Rate (Mass Flow) Calculator</a>
             <a href="airflowratetimebasedcal.html" class="calculator-btn">Air Flow Rate (Time-Based) Calculator</a>
             <a href="todetermineblowdownrateofboiler.html" class="calculator-btn">Boiler Blowdown Rate Calculator</a>
+            <a href="calculatingboilerefficiency.html" class="calculator-btn">Boiler Efficiency Calculator</a>
+            <a href="bernoullisequationwithconstantpotentialenerguterms.html" class="calculator-btn">Bernoulli's Equation With Constant Potential Energy Terms Calculator</a>
+
             <a href="carnoteffiencycalculator.html" class="calculator-btn">Carnot Efficiency Calculator</a>
             <a href="carbonfootprintefficiency.html" class="calculator-btn">Carbon Footprint Efficiency Calculator</a>
-            <a href="calculatingboilerefficiency.html" class="calculator-btn">Boiler Efficiency Calculator</a>
             <a href="todeterminetheabsoulteordynamicofafluid.html" class="calculator-btn">Dynamic Viscosity Calculator</a>
             
             <a href="envcarbonfootprintcal.html" class="calculator-btn">Environmental Impact Carbon Footprint Calculator</a>
@@ -665,6 +667,7 @@
             <a href="meansteamconsumption.html" class="calculator-btn">Mean Steam Consumption Of A Flow-Type Application Calculator</a>
             <a href="meanstreamflowratetoastoragecalorifier.html" class="calculator-btn">Mean Steam Flow Rate To A Storage Calorifier Calculator</a>
             <a href="maximumallowconcentration.html" class="calculator-btn">Maximum Allowable Concentration (MAC) Calculator</a>
+            <a href="todeterminemassflowratefromvolumetricflowrate.html" class="calculator-btn">Mass Flow Rate from volumetric flowrate Calculator</a>
             <a href="condensingsteam.html" class="calculator-btn">Heat Transferred By Condensing Steam Calculator</a>
             
             <a href="recyclingcarbonfootprintcalculator.html" class="calculator-btn">Recycling Carbon Footprint Savings Calculator</a>
