--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -682,6 +682,7 @@
 
 
             <a href="fallcal.html" class="calculator-btn">Fall Clearance Calculator</a>
+            <a href="fluidvelocitypitottube.html" class="calculator-btn">Fluid Velocity Calculator (Pitot Tube)</a>
 
             <a href="incidentratecal.html" class="calculator-btn">Incidence Rate Calculator</a>
             <a href="incidentfrequentrate.html" class="calculator-btn">Incident Frequency Rate (IFR) Calculator</a>
@@ -690,7 +691,8 @@
 
             <a href="ipchecker.html" class="calculator-btn">IP Rating Checker</a>
             <a href="kicktolerancecalculator.html" class="calculator-btn">Kick Tolerance Calculator</a>
-            <a href="thekineticenergyinsteam.html" class="calculator-btn"> Kinetic Energy In Steam</a>
+            <a href="thekineticenergyinsteam.html" class="calculator-btn"> Kinetic Energy In Steam Calculator</a>
+            <a href="kineticenergy.html" class="calculator-btn">Kinetic Energy Calculator</a>
 
 
            
@@ -709,8 +711,13 @@
             <a href="trir.html" class="calculator-btn">OSHA Total Recordable Incident Rate (TRIR) Calculator</a>
             <a href="dartcal.html" class="calculator-btn">OSHA DART Rate Calculator</a>
             <a href="ohmslaw.html" class="calculator-btn">Ohm's Law Calculator</a>
+            <a href="orificeplatebetaratio.html" class="calculator-btn">Orifice Plate Beta Ratio Calculator</a>
             <a href="ppecomplianceratecal.html" class="calculator-btn">PPE Compliance Rate</a>
             <a href="pressuregradientcalculator.html" class="calculator-btn">Pressure Gradient Calculator</a>
+            <a href="potentialenergy.html" class="calculator-btn">Potential Energy Calculator</a>
+
+            <a href="thepressuredropforaliquidequalsthefrictionloss.html" class="calculator-btn">Pressure Drop & Friction Loss Calculator</a>
+
             <a href="risklevelassessment.html" class="calculator-btn">Risk Level Assessment</a>
             <a href="riskprioritynumber.html" class="calculator-btn">Risk Priority Number (RPN) Calculator</a>
 
@@ -742,8 +749,12 @@
             <a href="requiredsteamflowratefromakw.html" class="calculator-btn">To Determine The Required Steam Flowrate From A kW Rating Calculator</a>
             <a href="velocity of steam passingthroughanorifice.html" class="calculator-btn">Velocity of Steam Passing Through an Orifice Calculator (1)</a>
             <a href="velocityofsteampassingthroughoriface2.html" class="calculator-btn">Velocity of Steam Passing Through an Orifice Calculator (2)</a>
+            <a href="potentialenergyatkineticenergy.html" class="calculator-btn">Velocity Calculator (Energy Conversion)</a>
+<a href="velocityofliquidthroughanorifice.html" class="calculator-btn">Velocity of Liquid through orifice calculator</a>
             <a href="wireropecal.html" class="calculator-btn">Wire Rope Grips Calculator</a>
             <a href="wellcontrolkillmudwidget.html" class="calculator-btn">Well Control (Kill Mud Weight) Calculator </a>
+
+
         </div>
     </section>
 </div>
