--- a/calculatorqehs.html
+++ b/calculatorqehs.html
@@ -272,6 +272,11 @@
     .main-header p {
         font-size: 1rem;
     }
+    .calendar-card h3 {
+    font-size: 0.9rem;
+    color: #1560bd;
+    text-align: center;
+}
 }
 
 @media (max-width: 480px) {
@@ -291,6 +296,11 @@
     .main-header p {
         font-size: 0.9rem;
     }
+    .calendar-card h3 {
+    font-size: 0.9rem;
+    color: #1560bd;
+    text-align: center;
+}
 }
 
 
@@ -402,7 +412,7 @@
         padding: 12px;
     }
     .category-img {
-        height: 190px; /* Adjust image size */
+        height: 140px; /* Adjust image size */
         width: 300px;
     }
     .btn-custom {
