--- a/calculatorqehs.html
+++ b/calculatorqehs.html
@@ -711,7 +711,7 @@
     </div>
 
     <!-- Beautiful Calendar Card -->
-    <a href="calendar.html" class="calendar-card">
+    <a href="index.html" class="calendar-card">
         <img src="images/vindus_clients_images/calender.webp" alt="Calendar Icon" class="calendar-img">
         <h3>The Calendar of a Century</h3>
     </a>
