--- a/calculatorqehs.html
+++ b/calculatorqehs.html
@@ -273,7 +273,7 @@
         font-size: 1rem;
     }
     .calendar-card h3 {
-    font-size: 0.9rem;
+    font-size: 14px;
     color: #1560bd;
     text-align: center;
 }
@@ -294,7 +294,7 @@
         font-size: 1.4rem;
     }
     .main-header p {
-        font-size: 0.9rem;
+        font-size: 14px;
     }
     .calendar-card h3 {
     font-size: 0.9rem;
@@ -412,8 +412,8 @@
         padding: 12px;
     }
     .category-img {
-        height: 140px; /* Adjust image size */
-        width: 300px;
+        height: 190px; /* Adjust image size */
+        
     }
     .btn-custom {
         width: 100%; /* Full width button */
