--- a/calculatorqehs.html
+++ b/calculatorqehs.html
@@ -259,48 +259,62 @@
     .main-header {
         padding: 20px;
     }
+
+  
+
     .logo, .calendar-card {
         width: 110px;
         height: 110px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column; /* Stack image & text properly */
+        text-align: center;
     }
+
     .calendar-img {
         width: 40px;
+        margin-bottom: 5px; /* Keeps text close to image */
     }
+
     .main-header h1 {
         font-size: 1.6rem;
     }
+
     .main-header p {
         font-size: 1rem;
     }
+
     .calendar-card h3 {
-    font-size: 0.5rem;
-   
-}
+        font-size: 0.8rem; /* Make text more readable */
+        margin: 0; /* Remove unnecessary spacing */
+    }
 }
 
 @media (max-width: 480px) {
     .main-header {
         padding: 15px;
     }
-    .logo, .calendar-card {
-        width: 90px;
-        height: 90px;
-    }
+
+   
+
     .calendar-img {
         width: 35px;
+        margin-bottom: 5px;
     }
-    .main-header h1 {
-        font-size: 1.4rem;
-    }
-    .main-header p {
-        font-size:1rem;
-    }
-    .calendar-card h3 {
-    font-size: 0.5rem;
-   
-}
-}
 
+    .main-header h1 {
+        font-size: 1.2rem;
+    }
+
+    .main-header p {
+        font-size: 1rem;
+    }
+
+    .calendar-card h3 {
+        font-size: 0.7rem;
+    }
+}
 
 .main-content {
     padding: 0px 2%;
