--- a/calculatorqehs.html
+++ b/calculatorqehs.html
@@ -260,7 +260,10 @@
         padding: 20px;
     }
 
-  
+    .logo, .calendar-card {
+        width: 110px;
+        height: 110px;
+    }
 
   
     .calendar-img {
@@ -286,7 +289,10 @@
     .main-header {
         padding: 15px;
     }
-
+    .logo, .calendar-card {
+        width: 90px;
+        height: 90px;
+    }
    
 
     .calendar-img {
