--- a/envcalculator.html
+++ b/envcalculator.html
@@ -624,10 +624,11 @@ p{
 <br><br><br><br>
 
 
-    <div class="main-header">
-        <h1>World's No.1 Environmental Compliance Calculator</h1>
-        <p>Your trusted tool ✔️ for Measures adherence to environmental regulations and best practices. This tool helps you track how well your actions align with environmental standards, ensuring a commitment to sustainability and compliance.</p>
-    </div>
+<div class="main-header">
+    <h1>World's No.1 Environmental Compliance Calculator</h1>
+    <p>Your Trusted Tool ✔️ For Measuring Adherence To Environmental Regulations And Best Practices. This Tool Helps You Track How Well Your Actions Align With Environmental Standards, Ensuring A Commitment To Sustainability And Compliance.</p>
+</div>
+
   
 
     <section class="environmental-calculator-container">
