--- a/firecalculator.html
+++ b/firecalculator.html
@@ -624,11 +624,11 @@ p{
 <br><br><br><br>
 
 
-    <div class="main-header">
-        <h1>World's No.1 Fire Safety Calculator</h1>
-        <p>Your trusted tool ✔️ for Evaluates fire risk management effectiveness by measuring the effectiveness of fire prevention efforts. This tool helps you assess how well you’ve reduced fire risks and ensured safety.</p>
-    </div>
-  
+<div class="main-header">
+    <h1>World's No.1 Fire Safety Calculator</h1>
+    <p>Your Trusted Tool For Evaluating Fire Risk Management Effectiveness By Measuring The Effectiveness Of Fire Prevention Efforts. This Tool Helps You Assess How Well You’ve Reduced Fire Risks And Ensured Safety.</p>
+</div>
+
 
     <section class="fire-safety-calculator-container">
         <div class="calculator-box">
