--- a/firesubcalculators.html
+++ b/firesubcalculators.html
@@ -622,7 +622,7 @@
 
 <div class="main-header">
     <h1>World's No.1 QEHS Calculator</h1>
-    <p>Your trusted tool ✔️ for Quality, Environment, Health, Safety & Fire Calculations</p>
+        <p>Your Trusted Tool For Quality, Environment, Health, Safety & Fire Calculations</p>
 </div>
 
 <div class="main-content">
