--- a/healthcalculator.html
+++ b/healthcalculator.html
@@ -624,10 +624,11 @@ p{
 <br><br><br><br>
 
 
-    <div class="main-header">
-        <h1>World's No.1 Health Performance Calculator</h1>
-        <p>Your trusted tool ✔️ for Indicates the percentage of healthy employees in the workplace. This tool helps monitor the overall health of your workforce, ensuring that your team remains fit and productive.</p>
-    </div>
+<div class="main-header">
+    <h1>World's No.1 Health Performance Calculator</h1>
+    <p>Your Trusted Tool For Indicating The Percentage Of Healthy Employees In The Workplace. This Tool Helps Monitor The Overall Health Of Your Workforce, Ensuring That Your Team Remains Fit And Productive.</p>
+</div>
+
   
 
     <section class="health-performance-container">
