--- a/safetycalculator.html
+++ b/safetycalculator.html
@@ -622,11 +622,11 @@
 <br><br><br><br>
 
 
-    <div class="main-header">
-        <h1>World's No.1 Safety Calculator</h1>
-        <p>Your trusted tool ✔️ for Measures the percentage of work days completed without accidents. This tool helps you track the safety of your work environment by showing how many days were accident-free, promoting a safer workplace.</p>
-    </div>
-  
+<div class="main-header">
+    <h1>World's No.1 Safety Calculator</h1>
+    <p>Your Trusted Tool  For Measuring The Percentage Of Work Days Completed Without Accidents. This Tool Helps You Track The Safety Of Your Work Environment By Showing How Many Days Were Accident-Free, Promoting A Safer Workplace.</p>
+</div>
+
 
     <section class="safety-calculator-container">
         <div class="calculator-box">
