--- a/calculatorqehs.html
+++ b/calculatorqehs.html
@@ -716,13 +716,13 @@
     <!-- Centered Header Content -->
     <div class="header-content">
         <h1>World's No.1 QEHS Calculator</h1>
-        <p>Your trusted tool for Quality, Environment, Health, Safety & Fire Calculations</p>
+        <p>Your Trusted Tool For Quality, Environment, Health, Safety & Fire Calculations</p>
     </div>
 
     <!-- Beautiful Calendar Card -->
     <a href="index.html" class="calendar-card">
         <img src="images/vindus_clients_images/calender.webp" alt="Calendar Icon" class="calendar-img">
-        <h3>The Calendar of a Century</h3>
+        <h3>The Calendar Of A Century</h3>
     </a>
 </div>
 
