--- a/qualitycalculator.html
+++ b/qualitycalculator.html
@@ -622,10 +622,11 @@ p{
 <br><br><br><br>
 
 
-    <div class="main-header">
-        <h1>World's No.1 Quality Calculator </h1>
-        <p>Your trusted tool ✔️ for Measures the percentage of defect-free units in total production. This tool helps you assess how much of your output is meeting quality standards, ensuring that you maintain high production standards without defects.</p>
-    </div>
+<div class="main-header">
+    <h1>World's No.1 Quality Calculator</h1>
+    <p>Your Trusted Tool  For Measuring The Percentage Of Defect-Free Units In Total Production. This Tool Helps You Assess How Much Of Your Output Is Meeting Quality Standards, Ensuring That You Maintain High Production Standards Without Defects.</p>
+</div>
+
   
     <section class="quality-calculator-container">
         <div class="calculator-box">
