--- a/calculatorqehs.html
+++ b/calculatorqehs.html
@@ -178,9 +178,10 @@
     justify-content: space-arou;
     background: linear-gradient(135deg, #000040, #1560bd);
     color: #fff;
-    padding: 30px 50px;
+    padding: 5px 50px;
     background-size: cover;
     flex-wrap: nowrap;
+    margin-top: 25px;
 }
 
 /* Clickable Logo */
@@ -190,8 +191,8 @@
     justify-content: center;
 }
 .logo {
-    width: 130px;
-    height: 130px;
+    width: 110px;
+    height: 110px;
     object-fit: contain;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
@@ -208,9 +209,12 @@
     flex: 1;
     text-align: center;
     padding: 0 20px;
+    padding-top:20px ;
+  
+   
 }
 .main-header h1 {
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin-bottom: 10px;
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
     color: white;
@@ -226,8 +230,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 130px;
-    height: 130px;
+    width: 110px;
+    height: 110px;
     background: #ffffff;
     color: #1560bd;
     text-align: center;
@@ -244,7 +248,7 @@
     margin-bottom: 5px;
 }
 .calendar-card h3 {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     color: #1560bd;
     text-align: center;
 }
@@ -704,7 +708,7 @@
                     </div>     <!-- End header-wrapper -->
                 </header>	
 
-<br><br><br><br>
+<br><br><br>
 
 
 <div class="main-header">
@@ -729,7 +733,7 @@
 
 
 <div class="main-content">
-    <section class="category-section container py-5">
+    <section class="category-section container py-2">
         <div class="row text-center justify-content-center">
             
             <div class="col-lg-2-5 col-md-4 col-sm-6">
