--- a/calculatorqehs.html
+++ b/calculatorqehs.html
@@ -740,7 +740,7 @@
                 <div class="category-card">
                     <a href="qualitysubcalculators.html">
                         <img src="images/vindus_clients_images/calquality.jpg" class="category-img" alt="Quality Calculators">
-                        <h3 class="category-title">Quality Calculators</h3>
+                        <h3 class="category-title">Quality <br>Calculators</h3>
                     </a>
                 </div>
                 <div class="calc-btn-container">
@@ -764,7 +764,7 @@
                 <div class="category-card">
                     <a href="healthsubcalculators.html">
                         <img src="images/vindus_clients_images/calhealth.jpg" class="category-img" alt="Health Calculators">
-                        <h3 class="category-title">Health Calculators</h3>
+                        <h3 class="category-title">Health<br> Calculators</h3>
                     </a>
                 </div>
                 <div class="calc-btn-container">
@@ -776,7 +776,7 @@
                 <div class="category-card">
                     <a href="safetysubcalculators.html">
                         <img src="images/vindus_clients_images/calsafety.jpg" class="category-img" alt="Safety Calculators">
-                        <h3 class="category-title">Safety Calculators</h3>
+                        <h3 class="category-title">Safety <br>Calculators</h3>
                     </a>
                 </div>
                 <div class="calc-btn-container">
